Style: Fix contrast issues on dark mode

--- a/src/css/dark-theme.less
+++ b/src/css/dark-theme.less
@@ -2,15 +2,8 @@ body.dark-theme {
     .helpicon {
         background-image: url(../images/icons/cf_icon_info_white.svg);
         opacity: 0.3;
-    }
-    .cf {
-        .helpicon {
-            background-image: url(../images/icons/cf_icon_info_grey.svg);
-            opacity: 0.4;
-            &:hover {
-                background-image: url(../images/icons/cf_icon_info_grey.svg);
-                opacity: 1;
-            }
+        &:hover {
+            opacity: 0.5;
         }
     }
     .gui_box_titlebar {
@@ -34,35 +27,6 @@ body.dark-theme {
         .logowrapper {
             img {
                 content: url(../images/bf_logo_black.svg);
-            }
-        }
-    }
-    .tab-pid_tuning {
-        .profile {
-            .helpicon {
-                background-image: url(../images/icons/cf_icon_info_grey.svg);
-                opacity: 0.4;
-                &:hover {
-                    opacity: 1;
-                }
-            }
-        }
-        .rate_profile {
-            .helpicon {
-                background-image: url(../images/icons/cf_icon_info_grey.svg);
-                opacity: 0.4;
-                &:hover {
-                    opacity: 1;
-                }
-            }
-        }
-        .pid_titlebar {
-            .helpicon {
-                background-image: url(../images/icons/cf_icon_info_grey.svg);
-                opacity: 0.4;
-                &:hover {
-                    opacity: 1;
-                }
             }
         }
     }
